webui: fix search box overlap in mobile mode

--- a/install/ui/ipa.css
+++ b/install/ui/ipa.css
@@ -222,6 +222,7 @@ div[name=settings].facet-group li a {
 .search-filter a {
     position: relative;
     margin: 0 0 0 -20px;
+    padding-right: 10px;
 }
 
 .pagination-control {
